@@ -8,6 +8,7 @@
     * New code and important changes from redis-py 2.10.5 have been added to the codebase.
     * Removed the need for threads inside of pipeline. We write the packed commands all nodes before reading the responses which gives us even better performance than threads, especially as we add more nodes to the cluster.
     * Allow passing in a custom connection pool
+    * Provide default max_connections value for ClusterConnectionPool (2**31)
 
 * 1.1.0
     * Refactored exception handling and exception classes.
